FakeAuthPolicyClient: RefreshDevicePolicy stores saved device policy

RefreshDevicePolicy stores saved device policy in the session manager.
E.g. it is unusable for tests to set specific device policies.

BUG=chromium:819657
TEST=FakeAuthPolicyClientTest.RefreshDevicePolicyStoresPolicy

Change-Id: Id90e090453da27ffa4527ed810bc1f45c5337a3a
Reviewed-on: https://chromium-review.googlesource.com/955842
Reviewed-by: Ryo Hashimoto <hashimoto@chromium.org>
Reviewed-by: Lutz Justen <ljusten@chromium.org>
Commit-Queue: Roman Sorokin <rsorokin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#544281}
Former-commit-id: 9bb304e76e3c22677f5f8993c88724db31fce957